--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "@coreui/coreui-free-react-admin-template",
+  "name": "umukinnyi_frontend",
   "version": "2.6.0",
-  "description": "CoreUI React Open Source Bootstrap 4 Admin Template",
-  "author": "Łukasz Holeczek",
-  "homepage": "https://coreui.io",
-  "copyright": "Copyright 2017-2019 creativeLabs Łukasz Holeczek",
+  "description": "Umukinnyi application",
+  "author": "Galu Alex",
+  "copyright": "Galu",
   "license": "MIT",
   "private": true,
   "repository": {
     "type": "git",
-    "url": "git@github.com:coreui/coreui-free-react-admin-template.git"
+    "url": "https://github.com/j4l13n/umukinnyi_frontend.git"
   },
   "dependencies": {
     "@coreui/coreui": "^2.1.12",
@@ -30,11 +29,23 @@
     "react-app-polyfill": "^1.0.1",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.1",
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-test-renderer": "^16.8.6",
     "reactstrap": "^8.0.0",
-    "simple-line-icons": "^2.4.1"
+    "simple-line-icons": "^2.4.1",
+    "react-file-reader": "^1.1.4",
+    "react-rating": "^1.7.2",
+    "react-responsive-modal": "^4.0.1",
+    "react-timeago": "^4.4.0",
+    "react-toastify": "^5.3.2",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-immutable-state-invariant": "^2.1.0",
+    "redux-mock-store": "^1.5.3",
+    "redux-promise-middleware": "^6.1.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "react-scripts": "^3.0.1"
@@ -48,7 +59,7 @@
     "eject": "react-scripts eject"
   },
   "bugs": {
-    "url": "https://github.com/coreui/coreui-free-react-admin-template/issues"
+    "url": "https://github.com/j4l13n/umukinnyi_frontend/issues"
   },
   "eslintConfig": {
     "extends": "react-app"
